fixnul jsem trochu ty menicka, account json serialization tweaks, a dalsi brikule

--- a/data/lang/en.yaml
+++ b/data/lang/en.yaml
@@ -8,6 +8,7 @@ login_still_timeout: "You can't log into this account for another {duration}"
 menu_accounts: "My accounts"
 menu_my_preferences: "My preferences"
 menu_logout: "Log out"
+menu_logout_exit: "Log out and exit"
 menu_select_account: "Select account"
 menu_open_new_account: "Open a new account"
 menu_back: "Go back"
@@ -19,3 +20,5 @@ debug_file_default: "File {file} doesn't exist, creating defaults.."
 
 user_dashboard: "MY DASHBOARD"
 user_welcome: "Welcome back, {user}"
+user_logout: "You have been logged out."
+user_logout_exit: "You have been logged out, exiting the application."
