--- a/data/lang/en.yaml
+++ b/data/lang/en.yaml
@@ -3,6 +3,8 @@ balance: "Balance"
 owners: "Owners"
 search: "Search"
 last_access: "Last access"
+order1: "latest to earliest"
+order2: "largest to lowest"
 
 # Messages regarding user authentication
 login_prompt_username: "Username"
@@ -37,6 +39,7 @@ menu_close_account: "Close this account"
 menu_open_audit_log: "Open audit log"
 menu_view_transaction_history: "View transaction history"
 menu_view_transaction_history2: "View transaction history (ordered by amount)"
+menu_view_audit_log: "Open audit log (ordered chronologically)"
 
 ## Settings menu
 menu_account_settings_change_name: "Change account name"
@@ -47,8 +50,7 @@ menu_account_settings_add_more_owners: "Add another owner"
 account_last_access_empty: "You're the first one here"
 account_owner_added: "{owner} has been given ownership over this account"
 account_showing_transactions: "Showing {count} transactions ({order})"
-account_showing_transactions_order: "latest to earliest"
-account_showing_transactions_order2: "largest to lowest"
+account_showing_audit_log: "Showing {count} audit log events ({order})"
 
 # Menu headers
 menu_header_dashboard: "MY DASHBOARD"
