additional account modification logic
Took 34 minutes

--- a/data/lang/en.yaml
+++ b/data/lang/en.yaml
@@ -52,7 +52,8 @@ menu_account_settings_add_more_owners: "Add another owner"
 
 ## General messages
 account_last_access_empty: "You're the first one here"
-account_owner_added: "{owner} has been given ownership over this account"
+account_owner_added: "{owner} has been granted account ownership"
+account_owner_already_in: "{owner} already owns this account"
 account_showing_transactions: "Showing {count} transactions ({order})"
 account_showing_audit_log: "Showing {count} audit log events ({order})"
 account_accessed_at: "Account accessed at {time}"
@@ -60,8 +61,10 @@ account_accessed_at_short: "{user} at {time}"
 account_modified_at: "{message} at {time}"
 account_outgoing_transaction: "{amount} to account {account} at {time}. Authorized by {user}"
 account_incoming_transaction: "{amount} from account {account} at {time}"
-account_name_changed: "This account's name is now set to {name}"
+account_name_changed: "Account name changed to {name}"
 account_close_confirmation: "Are you sure you want to close this account?"
+account_closed: "Account closed"
+account_close_failed: "Couldn't close this account"
 account_transaction_confirmation: "Authorize a transaction ({amount}) to account [{account}]?"
 account_insufficient_funds: "Transaction failed due to insufficient funds"
 account_transaction_successful: "Transaction successful!"
