auditlog tweaks, datetime formatting
Took 34 minutes

--- a/data/lang/en.yaml
+++ b/data/lang/en.yaml
@@ -64,7 +64,9 @@ account_incoming_transaction: "{amount} from account {account} at {time}"
 account_name_changed: "Account name changed to {name}"
 account_close_confirmation: "Are you sure you want to close this account?"
 account_closed: "Account closed"
+account_closed_event: "Account closed at {time}"
 account_close_failed: "Couldn't close this account"
+account_created: "Account created at {time}"
 account_transaction_confirmation: "Authorize a transaction ({amount}) to account [{account}]?"
 account_insufficient_funds: "Transaction failed due to insufficient funds"
 account_transaction_successful: "Transaction successful!"
