account open menu tweaks
Took 36 minutes

--- a/data/lang/en-US.yaml
+++ b/data/lang/en-US.yaml
@@ -66,12 +66,15 @@ account_close_confirmation: "Are you sure you want to close this account?"
 account_closed: "Account closed"
 account_closed_event: "Account closed at {time}"
 account_close_failed: "Couldn't close this account"
-account_created: "Account created at {time}"
+# Used for the audit log, account_opened is a notification of a successful account creation to the user
+account_created: "Account opened at {time}"
+account_opened: "A {type} with the name of {name} successfully opened"
 account_transaction_confirmation: "Authorize a transaction ({amount}) to account [{account}]?"
 account_insufficient_funds: "Transaction failed due to insufficient funds"
 account_transaction_successful: "Transaction successful!"
 account_open_currency_default: "Choose the currency, 3 letter code (leave empty for {currency})"
 account_open_currency: "Choose the currency, 3 letter code"
+account_open_limit: "You do not have any empty slots for a new account"
 invalid_currency: "Invalid currency"
 account_open_name: "Name of this account (leave empty for '{default}')"
 
